--- a/style.css
+++ b/style.css
@@ -33,8 +33,17 @@ body {
 }
 
 
-h1 { 
-  font-size: 30px;
+#headline { 
+  /* font-size: 60px; */
+ 
+  
+  -webkit-text-stroke: 2.5px rgb(216, 198, 166);
+  font-size: 2.3em;
+  /* background: -webkit-linear-gradient(#eee, rgb(245, 121, 5)); */
+ 
+  -webkit-text-fill-color: transparent;
+  
+  
  
 }
 
@@ -45,13 +54,18 @@ h1 {
  
   #county-text{
     /* margin-left: -10px; */
+    padding-top: 20px;
     margin-left: 20px;
     width: 50%;
     /* flex-grow: -3; */
     text-align: center;
    align-items: center;
-   padding-left: 70px;
-   margin-top: -15px;
+   padding: 10px;
+  
+   background-color: #ebc58e;
+   border-radius: 25px;
+   font-weight: 500;
+   border:2px black solid; 
 
   }
   #chartdiv {
@@ -65,10 +79,14 @@ h1 {
   }
   
   #headline {
+ 
+    background-color: rgb(175, 129, 43);
    flex-grow: 2;
    width: 100%;
   justify-content: center;
   text-align: center;
+  /* padding-bottom: 50px; */
+  box-shadow: 5px 10px 10px 5px grey;
 
   }
 
@@ -81,17 +99,66 @@ h1 {
   }
 
 
+  #information img {
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+   
+    
+    width: 350px;
+    height: 350px;
+    position: relative;
+    border-radius: 13px;
+    border: 3px solid rgb(70, 74, 107);
+    box-shadow: 20px 20px 10px grey;
+    
+    /* margin-left: 50px; */
+   
+
+  }
 
 
 }
 
 @media only screen and (max-width: 767px) {
-  
-  
 
-  .headline {
 
+  #information img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   
     
+    width: 250px;
+    height: 250px;
+    position: relative;
+    border-radius: 13px;
+    border: 3px solid rgb(70, 74, 107);
+    box-shadow: 10px 10px 5px grey;
+    
+    /* margin-left: 50px; */
+   
+
+  }
+
+
+  #county-text {
+
+    background-color: #ebc58e;
+    border-radius: 25px;
+    padding: 8px;
+    font-weight: 500;
+    border:2px black solid; 
+  }
+  
+  #headline {
+
+    justify-content: center;
+    text-align: center;
+
+  }
+
+  
 
   .flex-container .row  {
 
