--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(224,255,255,1) 35%, rgb(144, 203, 214) 100%);
+  background: url(https://upload.wikimedia.org/wikipedia/commons/e/e6/Death_Valley_Gerea_canescens.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .flex-container {
@@ -9,6 +13,8 @@ body {
   flex-direction: row;
   
 }
+
+
 
 
 .row {
@@ -41,7 +47,7 @@ body {
   font-size: 2.3em;
   /* background: -webkit-linear-gradient(#eee, rgb(245, 121, 5)); */
  
-  -webkit-text-fill-color: transparent;
+  
   
   
  
@@ -87,6 +93,17 @@ body {
   text-align: center;
   /* padding-bottom: 50px; */
   box-shadow: 5px 10px 10px 5px grey;
+
+    
+    -webkit-text-stroke: 2.5px rgb(216, 198, 166);
+    font-size: 2.3em;
+    /* background: -webkit-linear-gradient(#eee, rgb(245, 121, 5)); */
+   
+    -webkit-text-fill-color: transparent;
+    
+    
+   
+   
 
   }
 
@@ -152,6 +169,20 @@ body {
   }
   
   #headline {
+
+    color: #e67d37;
+    font-family: 'Trocchi', serif;
+    
+    -webkit-text-stroke: 2px black; /* width and color */
+    -webkit-text-fill-color: none;
+    
+
+    
+    
+  font-size: 2.3em;
+  /* background: -webkit-linear-gradient(#eee, rgb(245, 121, 5)); */
+ 
+
 
     justify-content: center;
     text-align: center;
