--- a/style.css
+++ b/style.css
@@ -185,6 +185,8 @@ body {
 
 
   #chartdiv {
+
+    margin-top: 25px;
     /* margin-top: 90px; */
     height: 350px;
     /* flex-grow: 2; */
@@ -217,8 +219,6 @@ body {
     
     -webkit-text-stroke: 2px black; /* width and color */
     -webkit-text-fill-color: none;
-    
-
     
     
   
